--- a/templates/setup.html
+++ b/templates/setup.html
@@ -13,6 +13,16 @@
         <div class="mb-4">
             <h4 class="mb-3">Select Grade Levels:</h4>
             <div class="row">
+                <!-- Kindergarten -->
+                <div class="col-md-3 col-sm-4 col-6">
+                    <div class="grade-checkbox" data-grade="k">
+                        <input type="checkbox" name="grades" value="k" id="gradek" class="d-none">
+                        <label for="gradek" class="w-100 text-center">
+                            <i class="fas fa-baby"></i>
+                            <br>Kindergarten
+                        </label>
+                    </div>
+                </div>
                 {% for grade in range(1, 13) %}
                 <div class="col-md-3 col-sm-4 col-6">
                     <div class="grade-checkbox" data-grade="{{ grade }}">
@@ -25,7 +35,7 @@
                 </div>
                 {% endfor %}
             </div>
-            <small class="text-muted">Select one or more grade levels for your quiz</small>
+            <small class="text-muted">Select one or more grade levels for your quiz (Kindergarten - Grade 12)</small>
         </div>
         
         <!-- Word Type Selection -->
